# glab-tui

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  audit.toml  install.ps1  install.sh  opencode.json
.github/: dependabot.yml  issue_template.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  coverage.yml  install.yml  msrv.yml  opencode.yml  post-release.yml  pr.yml  prepare-release.yml  release.yml  rust.yml  stale.yml
.gitlab/issue_templates/: bug.md  default.md  feature.md
.gitlab/merge_request_templates/: bug_fix.md  default.md  feature.md
.glab-tui/: config.toml
.opencode/agents/: gh-cli.md  git-workflow.md  glab-cli.md  rust-dev.md
Formula/: glab-tui.rb
assets/: demo-overview.tape  demo-search.tape  demo-selection.tape  generate-demos.sh
scoop/: glab-tui.json
scripts/: update-manifests.sh
src/: app.rs  cli.rs  config.rs  editor.rs  entity_editor.rs  event.rs  fetch.rs  git_helpers.rs  keybinding.rs  main.rs  templates.rs  ui.rs
src/backend/: gh.rs  glab.rs  mod.rs
src/domain/: branches.rs  client.rs  deployments.rs  issues.rs  milestones.rs  mod.rs  mr.rs  notifications.rs  pipelines.rs  releases.rs  runners.rs
src/gitlab/: branches.rs  client.rs  deployments.rs  discussions.rs  issues.rs  milestones.rs  mod.rs  mr.rs  notifications.rs  pipelines.rs  releases.rs  runners.rs  wiki.rs
src/handlers/: mod.rs  overlays.rs  tabs.rs
src/themes/: catppuccin-mocha.toml  clean.toml  deep-space.toml  default.toml  dracula.toml  everforest-dark.toml  gruvbox.toml  monokai.toml  (+5 more)
(+35 files in other folders)
