[package]
name = "glab-tui"
version = "0.2.1"
edition = "2024"

[dependencies]
ratatui = "0.30.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
chrono = "0.4.45"
tempfile = "3.10"
fuzzy-matcher = "0.3.7"
