[package]
name = "glab-tui"
version = "2.3.0"
edition = "2024"
description = "A terminal user interface for GitLab and GitHub"
license = "MIT"
repository = "https://github.com/rcieri/glab-tui"
homepage = "https://github.com/rcieri/glab-tui"
readme = "README.md"
keywords = ["gitlab", "github", "tui", "terminal", "git"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8"
anyhow = "1.0.86"
chrono = "0.4.45"
tempfile = "3.10"
fuzzy-matcher = "0.3.7"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
